Am implementat functionalitatea de gestionare si afisare a cookie-urilor, a redirectarilor, a erorilor si codurilor de status. Verificarea certificarilor SSL si suport HTTP le-am realizat prin implemnetarea functiei setHttpSettings().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,20 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(HttpClient main.cpp HttpClient.cpp HttpOptions.cpp)
+include_directories(/home/andreea/Desktop/git/Client-HTTP---Practica2024/build/jsoncpp/include)
+include_directories(/home/andreea/Desktop/git/Client-HTTP---Practica2024/json-develop/include)
+
+set ( SOURCE FILES
+src/main.cpp
+src/HttpClient.cpp
+src/HttpOptions.cpp
+include/HttpClient.h
+include/HttpOptions.h
+include/json/json.h
+)
+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(JSONCPP REQUIRED jsoncpp)
 
 find_package(CURL REQUIRED)
-target_link_libraries(HttpClient CURL::libcurl)
+target_link_libraries(HttpClient CURL::libcurl jsoncpp)
